--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@900&display=swap');
+
+
+
+.border{
+  border: 1px solid #000;
+}
+.borderNone{
+  border: none !important ;
+
+}
+.tituloContainer{
+height: 670px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+z-index: 1;
+background-image: url("/src/img/fondo5.jpg");
+position: relative; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.tituloContainer::before {
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  background-image: inherit;
+  filter: brightness(0.5);
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+}
+
+
+.margin{
+  margin: 250px 0;
+}
+
+
+.carruselContainer{
+
+  width: 100%;
+  margin:auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.skillsBox{
+height: 200px;
+margin: 220px 0 70px 0;
 }
