--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,12 @@ position: relative;
   margin: 250px 0;
 }
 
+@media screen and (min-width:1024px) {
+  .margin{
+    margin: 250px 150px;
+  }
+  
+}
 
 .carruselContainer{
 
